Revert "Try with add-opens just in case"
This reverts commit a0df6a9e33f657723525aa1ee7b1f58219fc4d80.