@@ -73,8 +73,6 @@ allprojects {
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
-            jvmArgs += '--add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED'
-
 
             useJUnitPlatform {
                 includeEngines 'junit-jupiter'
@@ -100,8 +98,6 @@ allprojects {
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
-            jvmArgs += '--add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED'
-
 
             // enable this to check for unintended use of boxed primitive iterators
             // note that this flag might cause OOMs on CI
